[package]
name = "musikbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
gstreamer = "0.19.4"
gstreamer-play = "0.19.4"
rand = "0.8.5"
tui = "0.19.0"
